<?xml version="1.0"?>
<package>
  <name>rosrtm_examples</name>
  <version>0.0.0</version>
  <description>The rosrtm_examples package</description>

  <maintainer email="gbrj@todo.todo">gbrj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_rtm_gateway</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>ros_rtm_gateway</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
